--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,6 +7,7 @@
   <meta name="description" content="changeme">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="stylesheet" href="application.css">
 </head>
 
 <body>
